add changes to done

--- a/email-ted.html
+++ b/email-ted.html
@@ -352,6 +352,31 @@
             word-break: break-word;
             padding: 10px 24px
         }
+
+        .contacts--disclaimer .contacts__infos__disclaimer__law .contacts__infos__disclaimer__law__title {
+            font-size: 11px;
+            line-height: 17px;
+            margin: 0;
+            text-align: left;
+            color: #666666;
+            margin-bottom: 21px;
+        }
+
+        .contacts--disclaimer .contacts__infos__disclaimer__law .contacts__infos__disclaimer__law__description {
+            font-size: 11px;
+            line-height: 17px;
+            margin: 0;
+            text-align: justify;
+            color: #666666;
+        }
+
+        .contacts--disclaimer .contacts__infos__disclaimer__law .contacts__infos__disclaimer__law__address {
+            font-size: 11px;
+            line-height: 17px;
+            margin: 0;
+            text-align: justify;
+            color: #666666
+        }
     </style>
 </head>
 
@@ -522,49 +547,42 @@
             <tbody>
                 <tr>
                     <td>
-                        <div>
-                            <div>
-                                <p
-                                    style="font-size:11px;line-height:17px;margin:0;text-align:left;color:#666666;margin-bottom:21px">
-                                    <strong>
-                                        DISCLAIMER
-                                    </strong>
-                                </p>
-                                <p style="font-size:11px;line-height:17px;margin:0;text-align:justify
-                                ;color:#666666">
-                                    Esta
-                                    mensagem é exclusivamente para fins informativos e não deve ser
-                                    considerada como uma recomendação, sugestão de estratégia ou análise
-                                    de valores mobiliários. Esta mensagem também não se enquadra como
-                                    uma oferta ou solicitação para a compra ou venda de qualquer
-                                    instrumento financeiro ou garantia de confirmação de operação. Além
-                                    disso, esta comunicação não leva em consideração os objetivos de
-                                    investimento, situação financeira ou necessidades específicas de
-                                    qualquer investidor e não deve servir como única fonte de
-                                    informações no processo decisório do investidor, que deverá realizar
-                                    uma análise da oferta e seus respectivos riscos, diante de seus
-                                    objetivos e da sua tolerância a riscos. A Terra Investimentos não se
-                                    responsabiliza pelos resultados advindos das decisões de
-                                    investimentos tomadas pelos clientes, não podendo ser acionada por
-                                    retornos positivos e/ou negativos que impactem o patrimônio do
-                                    investidor. Ressaltamos que as informações contidas nesta mensagem
-                                    poderão sofrer alterações sem aviso prévio, o que poderá impactar os
-                                    preços dos ativos no momento de efetiva contratação. Investimentos
-                                    em ações e outros valores mobiliários apresentam riscos elevados e a
-                                    rentabilidade obtida no passado não representa garantia de
-                                    resultados futuros, e a rentabilidade divulgada não é liquida de
-                                    impostos. O investimento em Ações, Fundos Imobiliários e BDRs não
-                                    são garantidos pelo Fundo Garantidor de Crédito (FGC).
+                        <p class="contacts__infos__disclaimer__law__title">
+                            <strong>
+                                DISCLAIMER
+                            </strong>
+                        </p>
+                        <p class="contacts__infos__disclaimer__law__description">
+                            Esta
+                            mensagem é exclusivamente para fins informativos e não deve ser
+                            considerada como uma recomendação, sugestão de estratégia ou análise
+                            de valores mobiliários. Esta mensagem também não se enquadra como
+                            uma oferta ou solicitação para a compra ou venda de qualquer
+                            instrumento financeiro ou garantia de confirmação de operação. Além
+                            disso, esta comunicação não leva em consideração os objetivos de
+                            investimento, situação financeira ou necessidades específicas de
+                            qualquer investidor e não deve servir como única fonte de
+                            informações no processo decisório do investidor, que deverá realizar
+                            uma análise da oferta e seus respectivos riscos, diante de seus
+                            objetivos e da sua tolerância a riscos. A Terra Investimentos não se
+                            responsabiliza pelos resultados advindos das decisões de
+                            investimentos tomadas pelos clientes, não podendo ser acionada por
+                            retornos positivos e/ou negativos que impactem o patrimônio do
+                            investidor. Ressaltamos que as informações contidas nesta mensagem
+                            poderão sofrer alterações sem aviso prévio, o que poderá impactar os
+                            preços dos ativos no momento de efetiva contratação. Investimentos
+                            em ações e outros valores mobiliários apresentam riscos elevados e a
+                            rentabilidade obtida no passado não representa garantia de
+                            resultados futuros, e a rentabilidade divulgada não é liquida de
+                            impostos. O investimento em Ações, Fundos Imobiliários e BDRs não
+                            são garantidos pelo Fundo Garantidor de Crédito (FGC).
 
-                                </p>
-                                <p style="font-size:11px;line-height:17px;margin:0;text-align:justify
-                                ;color:#666666">
-                                    <br />
-                                    Terra Investimentos, Rua Joaquim Floriano, 100, 5º andar, São Paulo,
-                                    SP 04534-000, Brasil
-                                </p>
-                            </div>
-                        </div>
+                        </p>
+                        <p class="contacts__infos__disclaimer__law__address">
+                            <br />
+                            Terra Investimentos, Rua Joaquim Floriano, 100, 5º andar, São Paulo,
+                            SP 04534-000, Brasil
+                        </p>
                     </td>
                 </tr>
             </tbody>
